// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WebhookHeaders /> spec renders the component 1`] = `
<h4
  class="euiTitle euiTitle--xsmall"
>
  Webhook headers
</h4>
`;

exports[`<WebhookHeaders /> spec renders the component 2`] = `
<h4
  class="euiTitle euiTitle--xsmall"
>
  Query parameters
</h4>
`;

exports[`<WebhookHeaders /> spec renders the empty component 1`] = `
<h4
  class="euiTitle euiTitle--xsmall"
>
  Webhook headers
</h4>
`;

exports[`<WebhookHeaders /> spec renders the empty component 2`] = `
<h4
  class="euiTitle euiTitle--xsmall"
>
  Webhook headers
</h4>
`;
